Name:           ApplePush
Version:        0.1

Cabal-Version:  >= 1.2
Author:         Jonathan Fischoff <jonathangfischoff@gmail.com>
Maintainer:     Jonathan Fischoff <jonathangfischoff@gmail.com>
Synopsis:       Library for Apple Push Notification Service and Apple Push Feedback Service
Category:       Network
license:	BSD3
license-file:	LICENSE
Build-Type:     Simple
Description:    A library sending push notifications through a secure socket, and receiving feedback of their delivery. Due to a limitation in HsOpenSSL, your private key cannot have a passphrase.
                
library
    build-depends:      
                    base >= 4 && < 5, 
                    bytestring >= 0.9, 
                    aeson >= 0.4, 
                    DebugTraceHelpers >= 0.12, 
                    HsOpenSSL >= 0.10.1.2, 
                    binary >= 0.5.0.2, 
                    unordered-containers >= 0.1.4.3, 
                    mtl >= 2.0.1.0, 
                    transformers,
                    parsec >= 3.1.2, 
                    attoparsec >= 0.10.0.3, 
                    QuickCheck >= 2.4.1.1, 
                    vector >= 0.9, 
                    text >= 0.11.1.9, 
                    template-haskell >= 2.5, 
                    derive >= 2.5.4,
                    network >= 2.3.0.7,
                    data-default >= 0.3
    exposed-modules:    PushApple, PushApple.Types, PushApple.Classes, PushApple.Instances, PushApple.Service, PushApple.CommandLineParser, PushApple.AppContext, PushApple.Commands
            
    hs-source-dirs:     src
    
Executable applepushtest
    Build-Depends:      base
    other-modules:      PushApple
    Main-Is:            Main.hs
    ghc-options:        -threaded -with-rtsopts=-N3
    Hs-Source-Dirs:     src
    
Test-Suite test-quickcheck
    type:       exitcode-stdio-1.0
    main-is:    tests/Properties.hs
    build-depends: base

Test-Suite test-cmd-parsing
    type:       exitcode-stdio-1.0
    main-is:    tests/CommandLineParsingTests.hs
    build-depends: base



